--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-server-solution",
   "version": "1.0.0",
-  "description": "",
+  "description": "![CF](http://i.imgur.com/7v5ASc8.png) LAB =================================================",
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose",
@@ -11,8 +11,8 @@
     "testEnvironment": "node"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Hannah Ingham",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
@@ -24,5 +24,13 @@
     "morgan": "^1.9.1",
     "supertest": "^3.3.0",
     "uuid": "^3.3.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hingham/13-rest-server-hi.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hingham/13-rest-server-hi/issues"
+  },
+  "homepage": "https://github.com/hingham/13-rest-server-hi#readme"
 }
