--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "![CF](http://i.imgur.com/7v5ASc8.png) LAB =================================================",
   "main": "index.js",
+  
   "scripts": {
+    "start": "node index.js",
     "test": "jest --verbose",
     "test-watch": "jest --watchAll --verbose"
   },
