--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "![CF](http://i.imgur.com/7v5ASc8.png) LAB =================================================",
   "main": "index.js",
-  
   "scripts": {
     "start": "node index.js",
     "test": "jest --verbose",
@@ -25,6 +24,7 @@
     "mongoose-schema-jsonschema": "^1.2.1",
     "morgan": "^1.9.1",
     "supertest": "^3.3.0",
+    "swagger-ui-express": "^4.0.2",
     "uuid": "^3.3.2"
   },
   "repository": {
